frontend/tests/cases/negative/notInScopeInterfaceAsConstraintToInterface.gr
-- we attempt to use 'Simple1' as a constraint,
-- but it is not in scope
interface {Simple1 a} => Simple2 a where
  simple : a -> a
